<resources>
    <string name="app_name">Now or Never</string>
    <string name="now_or_never">Now or Never</string>

    <!--- WebServiceActivity -->
    <string name="web_service">Web Service</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="description">Description:</string>
    <string name="genre">Genre:</string>
    <string name="platform">Platform:</string>
    <string name="publisher">Publisher:</string>
    <string name="developer">Developer:</string>
    <string name="release_date">Release Date:</string>
    <string name="sort_by">Sort by:</string>
    <string-array name="platform_array">
        <item>All</item>
        <item>pc</item>
        <item>browser</item>
    </string-array>
    <string-array name="genre_array">
        <item>All</item>
        <item>mmorpg</item>
        <item>shooter</item>
        <item>strategy</item>
        <item>moba</item>
        <item>racing</item>
        <item>mmo</item>
        <item>first-person</item>
        <item>battle-royale</item>
        <item>survival</item>
        <item>pvp</item>
        <item>pve</item>
        <item>zombie</item>
        <item>open-world</item>
        <item>superhero</item>
    </string-array>
    <string-array name="sort_by_array">
        <item>alphabetical</item>
        <item>popularity</item>
        <item>release-date</item>
    </string-array>

    <!--- LogInActivity -->
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login">Log In</string>
    <string name="logout">Log Out</string>
    <string name="signup">Sign Up</string>

    <!--- StickerMessagingActivity -->
    <string name="sticker_messaging">Sticker Messaging</string>
    <string name="sticker_type">Sticker Selection</string>
    <string name="send_sticker">Send Sticker</string>
    <string name="sticker_display">Most recent received sticker</string>
    <string name="username_inquiry">Receiver\'s username</string>
    <string name="about">About</string>
    <string name="history">History</string>
    <string name="sticker_description">Sticker display</string>
    <string name="all_users_title">All registered Usernames</string>
    <string name="done_btn">Done</string>
    <string name="channel_id">StickyMessagingChannel</string>
    <string name="history_act_header">Number of stickers</string>
    <string name="empty_list">0</string>

    <string-array name="sticker_type_array">
        <item>Star</item>
        <item>Microphone</item>
        <item>Music</item>
        <item>Phone</item>
        <item>Bluetooth</item>
    </string-array>

    <!--- TrackHabitActivity -->
    <string name="track_habit">Track Habits</string>
    <string name="streak">Current Streak: 0 days</string>
    <string name="createdDate">Created on</string>
    <string name="frequency">Frequency</string>
    <string name="habit_name_hint">Habit Name</string>
    <string name="freq_hint">How many</string>
    <string name="freq_suffix">minutes per day</string>
    <string name="save_habit">Save</string>
    <string name="cancel_save">Cancel</string>
    <string name="frequency_fab">Set your frequency</string>
    <string name="calendar_title">MMMM - yyyy</string>
    <string name="completion_check">Complete</string>

    <string name="nav_item_1">Home</string>
    <string name="nav_item_2">Note</string>
    <string name="nav_item_3">Statistic</string>
    <string name="nav_item_4">Media</string>
    <string name="nav_item_5">Friend</string>

    <!--- Media Fragment -->
    <string name="upload_here">Preview + upload new image</string>
    <string name="select_img">Select Image</string>
    <string name="upload_img">Upload Image</string>
    <string name="img_history">Your Images</string>
    <string name="add_a_new_habit">Add a new habit</string>
    <string name="notes">Notes</string>
    <string name="note_title">Note Title</string>
    <string name="note_description">Note Description</string>
    <string name="take_a_screenshot">Take a Screenshot</string>
    <string name="picture_to_be_uploaded">Picture to be uploaded</string>

</resources>