<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/inputHabitName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/habit_name_hint"
        android:inputType="text"
        android:textColorHint="#78909C"
        android:textSize="20sp"
        android:importantForAutofill="no" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/frequency_fab"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <EditText
            android:id="@+id/inputFreqNum"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:hint="@string/freq_hint"
            android:inputType="number"
            android:textColorHint="#78909C"
            android:textSize="20sp"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/freq_suffix" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/habitSaveBtn"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/save_habit" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cancelBtn"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/cancel_save" />

</LinearLayout>