<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/inputNoteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/note_title"
        android:hint="@string/note_title"
        android:inputType="text"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/inputNoteDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Note Description"
        android:hint="@string/note_description"
        android:inputType="text"
        android:textColorHint="#78909C"
        android:textSize="20sp" />

    <Button
        android:id="@+id/noteSaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/save_habit" />

    <Button
        android:id="@+id/noteCancelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/cancel_save" />
</LinearLayout>