<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    android:layout_marginVertical="5dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/descriptionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/titleTextView"
                app:layout_constraintTop_toBottomOf="@+id/platformTextView" />

            <TextView
                android:id="@+id/genreTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genre"
                app:layout_constraintStart_toStartOf="@+id/titleTextView"
                app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

            <TextView
                android:id="@+id/platformTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/platform"
                app:layout_constraintStart_toStartOf="@+id/titleTextView"
                app:layout_constraintTop_toBottomOf="@+id/genreTextView" />

            <TextView
                android:id="@+id/publisherTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publisher"
                app:layout_constraintStart_toStartOf="@+id/titleTextView"
                app:layout_constraintTop_toBottomOf="@+id/developerTextView" />

            <TextView
                android:id="@+id/developerTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                app:layout_constraintStart_toStartOf="@+id/descriptionTextView"
                app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

            <TextView
                android:id="@+id/releaseDateTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:text="@string/release_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>