<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/now_or_never"
        app:layout_constraintBottom_toTopOf="@+id/webServiceButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/webServiceButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showWebServiceActivity"
        android:text="@string/web_service"
        app:layout_constraintBottom_toTopOf="@+id/stickerMessagingButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/stickerMessagingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showStickerMessagingActivity"
        android:text="@string/sticker_messaging"
        app:layout_constraintBottom_toTopOf="@id/trackHabitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/webServiceButton" />

    <Button
        android:id="@+id/trackHabitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showHabitCentralPage"
        android:text="@string/track_habit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stickerMessagingButton" />

</androidx.constraintlayout.widget.ConstraintLayout>