<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".habit.MediaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            android:id="@+id/mediaFragTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/upload_here"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/firebaseImg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginVertical="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mediaFragTitle"
            tools:srcCompat="@tools:sample/avatars" />

        <Button
            android:id="@+id/selectImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_img"
            app:layout_constraintEnd_toStartOf="@id/uploadImageBtn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firebaseImg" />

        <Button
            android:id="@+id/uploadImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_img"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/selectImageBtn"
            app:layout_constraintTop_toBottomOf="@+id/firebaseImg" />

        <View
            android:id="@+id/breakLine"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uploadImageBtn"
            android:background="@color/underline" />

        <TextView
            android:id="@+id/imageRecyclerViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/img_history"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/breakLine" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/imageRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageRecyclerViewTitle" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>