<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/usernameView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:id="@+id/inputLayout"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@id/usernameView">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/sticker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Type 1" />

            <RadioButton
                android:id="@+id/sticker2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Type 2" />

            <RadioButton
                android:id="@+id/sticker3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="Type 3" />


        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/receiverUsername"
            android:hint="@string/username_inquiry"
            android:inputType="text"
            android:layout_marginStart="5dp"
            android:autofillHints="" />

        <Button
            android:id="@+id/sendStickerBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="sendSticker"
            android:text="@string/send_sticker" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/aboutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayout" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sticker_display"/>

        <TextView
            android:id="@+id/recentReceivedSticker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>


    <!--    TODO: Move these 2 recycle views into 2 separate activities for better UI + add 2 buttons -->
<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/receivedStickers"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:maxHeight="50dp"-->
<!--        app:layout_constraintBottom_toTopOf="@id/sentStickers"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/inputLayout">-->

<!--    </androidx.recyclerview.widget.RecyclerView>-->

<!--    <androidx.recyclerview.widget.RecyclerView-->
<!--        android:id="@+id/sentStickers"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="0dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:maxHeight="50dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/receivedStickers">-->

<!--    </androidx.recyclerview.widget.RecyclerView>-->

    <Button
        android:id="@+id/aboutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="getAllUsers"
        android:text="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>